--- a/main.html
+++ b/main.html
@@ -21,10 +21,33 @@
           </div>
           <div class="media-icons">
             <!-- your code here -->
+			  <a href="https://www.linkedin.com/company/acciojob/?originalSubdomain=in">Linkedin</a>
+			   <a href="https://www.facebook.com/deloitte/">Facebook</a>
+			   <a href="https://www.instagram.com/deloitte/?hl=en">Instagram</a>
+			   <a href="https://www.youtube.com/channel/UCsaD8A0aS7MTFU7Nl7-sKVA">Youtube</a>
+			   <a href="https://twitter.com/deloitteindia?lang=en">Twitter</a>
           </div>
         </div>
         <div class="link-boxes">
           <!-- your code here -->
+			<section>
+				<u>Home</u>
+				<br>
+				<a href="#">Home page</a>
+			</section>
+			<section>
+				<u>Services</u>	<br>
+				<a href="#">App design</a><br>
+				<a href="#">Web design</a>
+			</section>
+			<section><u>About</u><br>
+			<a href="#">About us</a></section>
+			<section><u>Contact</u><br>
+			<p>8879887262</p></section>
+			<section><u>Links</u><br>
+			<a href="https://www2.deloitte.com/in/en.html">Home</a><br>
+				<a href="https://www2.deloitte.com/in/en/pages/about-deloitte/articles/about-deloitte.html">About</a>
+			</section>
         </div>
       </div>
       <div class="bottom-details">
